2005-07-20  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/pluginutil.rb (argwords): escape double quotes (reported by
	Kazuhiro NISHIYAMA).

2005-07-19  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki-mode.el: revise for 0.8.1 (by Takeshi UME Imai).

2005-07-17  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb (toc_here): support a toc of another page.

	* misc/plugin/diffmail.rb (updating_mail): support the word diff
	format.
	* hiki/util.rb (word_diff_text): support the digest mode.

2005-07-17  Kouhei Yanagita <sugi@dream.big.or.jp>
	* doc/HACKING.txt, doc/HACKING.en: add HACKING documents.

2005-07-16  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (token_to_s): add interwiki to
	toc_title (reported by Kazuhiro NISHIYAMA).

	* misc/plugin/attach/attach.rb (attach_show_page_files_checkbox):
	escape a filename (reported by Kazuhiro NISHIYAMA).
	(attach_flash_anchor): escape a filename.

2005-07-16  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/repos/default.rb: ReposBase#root and ReposBase#data_path are
	now private.

	* hiki/repos/cvs.rb (setup, import, update, commit, delete,
	get_revision, revisions): use Dir.chdir with a block.

	* hiki/repos/default.rb, hiki/repos/cvs.rb, hiki/repos/svn.rb,
	hiki/repos/svnsingle.rb, misc/hikifarm/index.cgi,
	misc/hikifarm/vc-backend-setup.cgi: separate HikifarmRepos* from Repos*.

	* test/test_hikifarm.rb: change @data_path to @data_root.

2005-07-15  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/en/math.rb: add English resources (by Kashia Buch).

	* hiki/config.rb (load): now default vaule of @use_plugin is true.
	set @cgi_name to './' if it is empty.
	* hiki/plugin.rb (save): set a ':editor' attribute.

2005-07-14  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/hikifarm/index.cgi (run): not to use Hiki::Util.redirect as
	a module function to avoid an error.

	* misc/hikifarm/cvs.rb, misc/hikifarm/svn.rb: ReposCvs and
	ReposSvnBase are derived from ReposBase instead of ReposDefault.
